--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-.App {
-  text-align: center;
-}
+.App {}
 
 .App-logo {
   height: 40vmin;
@@ -8,15 +6,32 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  height: 50vh;
 }
 
 .App-link {
   color: #09d3ac;
+}
+
+.bg-artwork {
+  background-color: #0093E9;
+  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+  background-repeat: repeat-x;
+  background-size: cover;
+  z-index: 1;
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  align-items: center;
+}
+
+.player-container {
+  width: 80%;
+  margin: auto;
 }
